# v5

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.test.yml  get-v5.sh  install-global.sh  install.sh  pyproject.toml  requirements.txt  test  test.sh  uninstall-global.sh  uninstall.sh  v5
.github/workflows/: test.yml
docs/: TAP_OUTPUT.md
src/: __init__.py
src/core/: __init__.py  v5_system.py  v5_tool.py
src/utils/: __init__.py  goal_parser.py  messaging.py
src/windows/: __init__.py  window_a.py  window_b.py  window_c.py  window_d.py  window_e.py
test-results/: README.md  all-tests-combined-2025-10-07.tap  all-tests-combined-2025-10-08.tap  core-tool-tests-2025-10-07.tap  core-tool-tests-2025-10-08.tap  install-tests-2025-10-08.tap  installation-tests-2025-10-07.tap  uninstall-tests-2025-10-08.tap
tests/: Dockerfile  docker-compose.test.yml  nginx.conf  test.sh  test_helper.bash
tests/fixtures/: sample_goal.yaml
tests/integration/: test_consolidated_scripts.bats  test_install.bats  test_installation.bats  test_uninstall.bats
tests/unit/: test_core_system.bats  test_core_tool.bats
warp-api/: .gitignore  CHANGELOG.md  README.md  warp_api.py
warp-api/tests/: .gitignore  PERSISTENT_VM_GUIDE.md  README.md  RESET_AND_CLEANUP.md  Vagrantfile  test.sh  test_helper.bash  warp_api.bats
