[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v5-development-tool"
version = "1.0.0"
description = "V5 - 5 Strategies Productive Development Tool"
authors = [
    {name = "V5 Development Team"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0",
    "psutil>=5.9.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
messaging = [
    "pika>=1.3.0",
]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov",
]
all = [
    "pika>=1.3.0",
    "black",
    "flake8", 
    "mypy",
    "pytest",
    "pytest-cov",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pylint]
max-line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]